--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,9 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "backend",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "backend for serabutin-app-web",
+  "author": "rmdsftr",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -23,11 +24,16 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
-    "@prisma/client": "^6.8.2",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "luxon": "^3.6.1",
+    "multer": "^2.0.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -37,12 +43,16 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@prisma/client": "^6.9.0",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
-    "@types/express": "^5.0.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.2",
     "@types/jest": "^29.5.14",
     "@types/luxon": "^3.6.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
@@ -50,7 +60,7 @@
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
-    "prisma": "^6.8.2",
+    "prisma": "^6.9.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
